# openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   description: API of EtuEDT-Back server.
-  version: 2.0.1
+  version: 2.1.0
   title: EtuEDT-Back
 servers:
   - url: https://edtapi.antoninhuaut.fr/v2
@@ -20,18 +20,11 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/University'
-  /{numUniv}:
+  /room:
     get:
       tags:
         - timetable
-      summary: Get a list of the university's timetables
-      parameters:
-        - name: numUniv
-          in: path
-          description: Id of university
-          required: true
-          schema:
-            type: integer
+      summary: Get a list of the room's timetables
       responses:
         '200':
           description: Successful operation
@@ -41,24 +34,12 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Timetable'
-        '404':
-          description: Invalid parameters
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /{numUniv}/{adeResources}:
+  /room/{adeResources}:
     get:
       tags:
         - timetable
-      summary: Get timetable details by numUniv and adeResources
+      summary: Get room timetable details by adeResources
       parameters:
-        - name: numUniv
-          in: path
-          description: Id of university
-          required: true
-          schema:
-            type: integer
         - name: adeResources
           in: path
           description: Id of timetable
@@ -78,18 +59,76 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-  /{numUniv}/{adeResources}/{format}:
+  /room/{adeResources}/{format}:
     get:
       tags:
         - timetable
-      summary: Get timetable content by numUniv, adeResources and by format
+      summary: Get room timetable content by adeResources and format
       parameters:
-        - name: numUniv
+        - name: adeResources
           in: path
-          description: Id of university
+          description: Id of timetable
           required: true
           schema:
             type: integer
+        - name: format
+          in: path
+          description: Format to return
+          required: true
+          schema:
+            type: string
+            enum:
+              - ics
+              - json
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/JsonEvent'
+            text/calendar:
+              schema:
+                $ref: '#/components/schemas/IcalEvent'
+        '404':
+          description: Invalid parameters
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /{adeResources}:
+    get:
+      tags:
+        - timetable
+      summary: Get timetable details by adeResources
+      parameters:
+        - name: adeResources
+          in: path
+          description: Id of timetable
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Timetable'
+        '404':
+          description: Invalid parameters
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /{adeResources}/{format}:
+    get:
+      tags:
+        - timetable
+      summary: Get timetable content by adeResources and format
+      parameters:
         - name: adeResources
           in: path
           description: Id of timetable
@@ -128,9 +167,6 @@ components:
     University:
       type: object
       properties:
-        numUniv:
-          type: integer
-          example: 1
         nameUniv:
           type: string
           example: Université de Caen
@@ -140,9 +176,6 @@ components:
     Timetable:
       type: object
       properties:
-        numUniv:
-          type: integer
-          example: 1
         nameUniv:
           type: string
           example: Université de Caen
